NIFI-14892 Aligned those processors and controller services whose property names do not match the human-friendly display names in extended bundles nifi-airtable-bundle, nifi-amqp-bundle, nifi-asana-bundle, nifi-asn1-bundle and nifi-aws-bundle.